# tesis-licenciatura

./: (0) Introducción.ipynb  (1) STO-3G.ipynb  (2) elementos_matriz.ipynb  (2) f_pq-Copy1.ipynb  (2) f_pq.ipynb  (2.1) f_pq.ipynb  (2.2) g_pqrs.ipynb  (3) VQE.ipynb  (3) g_pqrs-Copy1.ipynb  (3) g_pqrs.ipynb  (3-1) g_pqrs-matrices.ipynb  (4) H2.ipynb  (4) HF.ipynb  (4) VQE.ipynb  (5) VQE.ipynb  (ex1) H2+.ipynb  (old) elementos_matriz-Copy1.ipynb  (old) elementos_matriz.ipynb  (old) f_pq.ipynb  (plt) H2+.ipynb  (plt) H2.ipynb  (plt) STO-3G.ipynb  .gitignore  LICENSE  README.md  STO3G.py  Untitled-Copy1.ipynb  Untitled.ipynb  Untitled2.ipynb  VQE test.ipynb  VQE_test.ipynb  bloch_sphere.ipynb  checker.ipynb  elementos_matriz-Copy1.ipynb  elementos_matriz.py  elementos_test.py  extras.py  f_pq.ipynb  f_pq.py  funciones.py  (+9 more)
H2/: STO3G.py  elementos_matriz.py  f_pq.py  g_pqrs.py  graficar.py  utils.py
data/: H2+.csv  H2_CI1.csv  H2_CI2.csv  H2_Distancias.csv  H2_Gpqrs.csv  H2_J11.csv  H2_J12.csv  H2_J22.csv  H2_K12.csv  H2_RHF1.csv  H2_RHF2.csv  H2_STO3G_CI1.csv  H2_STO3G_CI2.csv  H2_STO3G_Fpq.csv  H2_STO3G_Hcore.csv  H2_STO3G_J11.csv  H2_STO3G_J12.csv  H2_STO3G_J22.csv  H2_STO3G_K12.csv  H2_STO3G_RHF1.csv  H2_STO3G_RHF2.csv  H2_STO3G_UHF1.csv  H2_STO3G_UHF2.csv  H2_STO3G_VQE.csv  H2_STO3G_h11.csv  H2_STO3G_h22.csv  H2_UHF.csv  H2_UHF1.csv  H2_UHF2.csv  H2_VQE.csv  H2_distancias.csv  H2_h11.csv  H2_h22.csv  H2_hnuc.csv  Hcore.csv  RHF1.csv  RHF2.csv  STO3G.csv  UHF1.csv  UHF2.csv
imgs/: SSS.eps  SSSO.eps  X1s.eps  energia_ion_hidrogeno_molecular.eps
