[project]
name = "tesis-licenciatura"
version = "0.1.0"
description = "configuracion para codigo de tesis de licenciatura"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "qiskit==1.4.2",
    "qiskit-aer>=0.17.1",
    "qiskit-ibm-runtime>=0.40.1",
    "qiskit-nature>=0.7.2",
    "scipy>=1.16.1",
]
